--- a/dsrnngan/data_paths.yaml
+++ b/dsrnngan/data_paths.yaml
@@ -16,3 +16,13 @@ AOPP:
 
     TFRecords:
         tfrecords_path: '/network/group/aopp/predict/TIP018_HARRIS_TENSORFL/tfrecords-regICPAC-meansd'
+
+
+COURSE:
+    GENERAL:
+        TRUTH_PATH: '/data/course-material/IMERG'
+        FORECAST_PATH: '/data/course-material/IFSyears'
+        CONSTANTS_PATH: '/data/course-material/constants'
+
+    TFRecords:
+        tfrecords_path: '/data/course-material/tfrecords'
