minor fixes on cGAN configs

--- a/dsrnngan/data_paths.-example.yaml
+++ b/dsrnngan/data_paths.-example.yaml
@@ -30,6 +30,7 @@ JASON:
     TRUTH_PATH: "/data/course-material/IMERG"
     FORECAST_PATH: "/data/course-material/IFSyears"
     CONSTANTS_PATH: "/data/course-material/constants"
+    NORMALISATION_PATH: "/data/course-material/constants"
 
   TFRecords:
     tfrecords_path: "/data/course-material/tfrecords"
