--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "downscaling-cgan"
-version = "0.1.2"
+version = "0.1.3"
 description = "post-process rainfall forecasts using cGAN"
 authors = ["Jason Kinyua <jaysnmury@gmail.com>"]
 readme = "README.md"
@@ -14,7 +14,7 @@ jupyter = "^1.0.0"
 xarray = "^2024.1.0"
 matplotlib = "^3.8.2"
 numba = "^0.58.1"
-pandas = "^2.2.0"
+pandas = "2.1"
 netcdf4 = "^1.6.5"
 h5netcdf = "^1.3.0"
 scikit-learn = "^1.4.0"
